# MidWay

./: .cvsignore  .gitignore  AUTHORS  BUGS  Branches  ChangeLog  MANIFEST  Makefile.in  NEWS  NOTES  README  README-MACOS  README.md  RELEASE_NOTES.html  TODO  conf-test  conf-test-hammer  config.h.in  configure  configure.in  conftest
conf/: gateways.ini  mwd.ini  mwd.xml  mwd.yaml  servers.ini
doc/: environment-vars.txt  mwsrvmgr.txt  srb-protocol.ms
html-doc/: Intro.html  Makefile  Makefile.in  Objects.txt  api.html  blank.html  conversations.html  coupling.html  funneling.html  index.html  logo1  logo2  logo2.1  midwayshort.html  mwattach.3.html  nintyten.fig  objects-functions.html  osistack-small.sda  osistack.html  osistack.sda  parallellization.html  presentation.html  roadmap.html  test.sda  toc.html  trans.txt  transactions.html  ttcp-sec.txt  tuxedo.html
html-doc/mans/: Makefile  Makefile.in  mkhtml.pl
include/: MidWay.h
man/: Makefile.in
man/man1/: Makefile.in  mwadm.1  mwcall.1  mwd.1  mwevent.1  mwgwd.1  mwserver.1
man/man3/: Makefile.in  mwMainLoop.3C  mwabort.3C  mwacall.3C  mwaddtask.3C  mwalloc.3C  mwattach.3C  mwbegin.3C  mwconnect.3C  mwdeltask.3C  mwevent.3C  mwfetch.3C  mwforward.3C  mwfree.3C  mwlistsvc.3C  mwlog.3C  mwloglevel.3C  mwprovide.3C  mwrecvevent.3C  mwreply.3C  mwservice.3C  mwservicerequest.3C  mwsetcred.3C  mwsuspendtask.3C  mwunprovide.3C  urlmap.3C  urlmap.3C.~1~  urlmapadd.3C  urlmapadd.3C.~2~  urlmapdecode.3C  urlmapencode.3C  urlmapencode.3C.~3~  urlmapnadd.3C  urlmapnset.3C  urlmapset.3C  urlmapset.3C.~2~
man/man7/: Makefile.in  MidWay.7
man/man8/: Makefile.in  mwbd.8
mod_MidWay/: Makefile  Makefile.in  TODO  mod_midway.c
node.js/: ReadMe  binding.gyp  modeway-node.js  mw_client_wrapper.cc  mw_server_wrapper.cc  mw_wrapper.cc  mw_wrapper.h  test-async.js  test.js  utils.cc
perl/: testnetclient.pl
perl/MidWay/: NetClient.pm
scripts/: MidWay.spec  MidWay.spec.in  midway.rc  midway.rc.in  midway.spec
src/: Doxyfile  Makefile  Makefile.in  NOTES  mainpage.dox
src/include/: .cvsignore  MidWay.h  SRBclient.h  SRBprotocol.h  acconfig.h.in  address.h  connection.h  internal-events.h  ipcmessages.h  ipctables.h  multicast.h  mwclientapi.h  mwclientipcapi.h  mwserverapi.h  osdep.h  shmalloc.h  tasks.h  urlencode.h  utils.h  version.h  version.h.in
src/lib/: GLP.h  Makefile  Makefile.in  SRBclient.c  SRBprotocol.c  address.c  connection.c  errnos.h  ipcmessages.c  ipctables.c  multicast.c  mwclientapi.c  mwclientipcapi.c  mwlog.c  mwserverapi.c  osdep.c  procinfo.h  shmalloc.c  tasks.c  testmiddleway.c  testmidway.c  timepeg.c  utils.c  version.c
src/liburlencode/: Makefile  Makefile.in  test-liburlencode.c  timepegs.c  urlclass.h  urlencoded.c  urlfieldlist.c  urlmap.c  weakmwlog.c
src/mwadm/: .cvsignore  Makefile  Makefile.in  adm.pl  commands.c  commands.h  dtbl.c  dtbl.h  dumpmesg.pl  mwadm.c  mwadm.h
src/mwbd/: .cvsignore  Makefile.in  mwbd.c  mwbd.h  mwbd_sockets.c  mwbd_sockets.h  sockets.h
src/mwcall/: .cvsignore  Makefile  Makefile.in  mwcall.c
src/mwd/: .cvsignore  Makefile  Makefile.in  events.c  events.h  example.conf  execvpe.c  execvpe.h  ipcclean  mwd.c  mwd.h  mwd.xml  requestparse.c  requestparse.h  servermgr.c  servermgr.h  shmallocfmt.c  shmallocfmt.h  simpleSrvManager.c  simpleSrvManager.h  singleServerManager.c  tables.c  tables.h  utils.c  utils.h  watchdog.c  watchdog.h  xmlconfig.c  xmlconfig.h
src/mwevent/: .cvsignore  Makefile.in  mwevent.c
src/mwgwd/: .cvsignore  Makefile  Makefile.in  SRBprotocol.c  SRBprotocolServer.c  SRBprotocolServer.h  acl.c  acl.h  broker.c  broker.h  call-pending-data.c  call-pending-data.h  callstore.c  callstore.h  connections.c  connections.h  gateway.c  gateway.h  impexp.c  impexp.h  ipcserver.c  ipcserver.h  pattern.c  pattern.h  remdomains.c  remdomains.h  srbevents.c  srbevents.h  store.c  store.h  tcpserver.c  tcpserver.h  toolbox.c  toolbox.h  xmlconfig.c  xmlconfig.h
src/mwserver/: .cvsignore  Makefile  Makefile.in  mwserver.c  shared_lib_services.c  shared_lib_services.h  testservices.c
src/test/: Makefile  Makefile.in  README  chargen.c  runmwcall  shell.c  testsuite.c  testsuite.h  testsuiteclient.c  testsuiteserver.c
